<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".petItemCollar">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="413dp"
        android:layout_height="53dp"
        android:background="#CABBE9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/cm6"
            android:layout_width="191dp"
            android:layout_height="27dp"
            android:layout_marginTop="12dp"
            android:text="@string/pets_items"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="51dp"
            android:layout_height="37dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cm6"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_menu_vertical_90" />

        <ImageView
            android:id="@+id/srchimage"
            android:layout_width="40dp"
            android:layout_height="26dp"
            android:contentDescription="@string/srch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481"
            app:srcCompat="@drawable/icons8_search_150"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="36dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/backnavigation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cm6"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icons8_left_100"
            android:onClick="btn_backword"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="328dp"
        android:layout_height="172dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/item_4_main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView"
        app:srcCompat="@drawable/s_l1600" />

    <ImageView
        android:id="@+id/itemnext"
        android:layout_width="46dp"
        android:layout_height="77dp"
        android:layout_marginEnd="40dp"
        android:background="#CABBE9"
        android:contentDescription="@string/right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/icons8_right_arrow_100" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="46dp"
        android:layout_height="75dp"
        android:layout_marginEnd="236dp"
        android:background="#CABBE9"
        android:contentDescription="@string/left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toStartOf="@+id/itemnext"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/icons8_left_100" />

    <TextView
        android:id="@+id/item4_topic"
        android:layout_width="360dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:background="#F3CECE"
        android:text="@string/item_4_topic"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/item_4_location"
        android:layout_width="92dp"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:background="#F3CECE"
        android:text="@string/item_4_location"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item4_topic" />

    <TextView
        android:id="@+id/item_4_d"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:background="#FAFAFA"
        android:text="@string/item_4_description"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView19" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="405dp"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/main_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_4_d_price"
        app:srcCompat="@drawable/d2" />

    <TextView
        android:id="@+id/cn"
        android:layout_width="299dp"
        android:layout_height="24dp"
        android:background="#F3CECE"
        android:text="@string/contact_number"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView19"
        app:layout_constraintVertical_bias="0.944" />

    <TextView
        android:id="@+id/item_4_d_price"
        android:layout_width="171dp"
        android:layout_height="33dp"
        android:background="#F3CECE"
        android:text="@string/d_price"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_4_location" />

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="#574b90"
        android:text="@string/buy_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/button2"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:background="#574b90"
        android:text="@string/add_to_cart_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:layout_constraintVertical_bias="0.444" />


</androidx.constraintlayout.widget.ConstraintLayout>