<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daycares.Activities.ChangeBookingd">

    <ImageView
        android:id="@+id/et_booking6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:contentDescription="@string/book_daycare_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/daycarebook"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView15"

        android:layout_width="407dp"
        android:layout_height="477dp"
        android:layout_marginBottom="4dp"
        android:background="#A68DD1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#7D53C6"
        android:text="@string/btn_edit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="backtoform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkout_date" />

    <TextView
        android:id="@+id/chkout_date"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="256dp"
        android:text="@string/chkout_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#7D53C6"
        android:onClick="gotofirst"
        android:text="@string/btn_del"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirmbooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_edit" />

    <Button
        android:id="@+id/btn_confirmbooking"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#7D53C6"
        android:text="@string/btn_confirmbooking"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <TextView
        android:id="@+id/tv_dc_name"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_dc_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_booking6" />

    <TextView
        android:id="@+id/tv_locationd"
        android:layout_width="188dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_locationd"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dc_name" />

    <TextView
        android:id="@+id/tv_custname"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_custname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/tv_phn"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:text="@string/tv_phn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/tv_cmail"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="148dp"
        android:text="@string/tv_cmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/chk_date"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="204dp"
        android:text="@string/chk_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imgd"
        android:layout_width="169dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_booking6"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/daycare2" />
</androidx.constraintlayout.widget.ConstraintLayout>