<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Doctors.Vet_Results"
    >



    <ImageView
        android:id="@+id/image_View4"
        android:layout_width="421dp"
        android:layout_height="59dp"
        android:contentDescription="@string/vet_surgeon_find"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/findvet1" />


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="295dp"
        android:layout_height="88dp"
        android:contentDescription="@string/watch_favorite_list"
        android:onClick="gotofavpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/favlist1"
        tools:layout_editor_absoluteX="142dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/et_text1"
        android:layout_width="378dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/et_text1"
        android:textColor="@color/black"
        android:textColorLink="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_View4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/VetList"
        android:layout_width="407dp"
        android:layout_height="493dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text1"
        app:layout_constraintVertical_bias="0.086" />

</androidx.constraintlayout.widget.ConstraintLayout>